[tool.poetry]
name = "ucroe"
version = "0.1.0"
description = "a Python decorator that caches a function’s return value and reuses it if the function raises an exception on subsequent calls"
authors = ["melvin <melvinkcx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
ipdb = "^0.13.13"
cachetools = "^5.5.0"
tenacity = "^9.0.0"
ruff = "^0.7.0"
pytest = "^8.3.3"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 8.0
addopts = "-s"

[tool.pytest_env]
PYTHONBREAKPOINT = "ipdb.set_trace"